--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body {
   padding-bottom: 20px;
   
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   body {
     font-size: 16px;
   }
